# nmm-py

./: .travis.yml  MANIFEST.in  README.md  build_ext.py  libpath.py  pyproject.toml  setup.cfg  setup.py
ci/: install-c-deps.sh  install_c_deps.sh  linux-deps  macos-deps  prepare-linux.sh  test
nmm/: __init__.py  _alphabet.py  _base.py  _base_table.py  _cdata.py  _cli.py  _codon.py  _codon_old.py  _codon_prob.py  _codon_table.py  _codont.py  _codont_old.py  _fasta.py  _frame_state.py  _gencode.py  _gff.py  _hmm.py  _hmmer.py  _hmmer_path.py  _interval.py  _log.py  _lprob.py  _path.py  _result.py  _results.py  _sequence.py  _sequence_table.py  _state.py  _step.py  _string.py  _subsequence.py  _table.py  _translator.py  alphabet.py  codon.py  conftest.py  fragment.py  hmmer.py  imm.h  interface.h  (+7 more)
nmm/_cli/: _cli.py  _misc.py  score.py  search.py
nmm/_hmmer/: __init__.py  amino_acid.py  background.py  codon.py  core.py  fragment.py  frame.py  frame_core.py  frame_profile.py  frame_result.py  frameshift.py  model.py  normal.py  path.py  profile.py  reader.py  result.py  standard.py  standard_core.py  standard_model.py  standard_profile.py  standard_result.py  transition.py
nmm/_imm/: __init__.py  _alphabet.py  _alphabet_table.py  _dp.py  _fragment.py  _hmm.py  _lprob.py  _path.py  _result.py  _results.py  _sequence.py  _sequence_table.py  _state.py  _step.py  imm.h
nmm/_nmm/: __init__.py  _alphabet.py  _amino_alphabet.py  _amino_table.py  _base.py  _base_alphabet.py  _base_table.py  _codon.py  _codon_iter.py  _codon_prob.py  _codon_table.py  _input.py  _model.py  _output.py  _state.py  nmm.h
nmm/imm/: __init__.py  _hmm.py  _lprob.py  _path.py  _result.py  _results.py  _sequence.py
(+41 files in other folders)
